@@ -5,4 +5,4 @@ include_directories(${GLIB2_INCLUDE_DIRS})
 
 
 add_library( boxyseq ${LIBBOXYSEQ_SOURCES})
-
+add_definitions(-DUSE_16BIT_ARRAY)
